# AscendNPU-IR

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  OWNERS  README.md  README_zh.md
bishengir/include/bishengir/: CMakeLists.txt  InitAllDialects.h  InitAllExtensions.h  InitAllPasses.h
bishengir/include/bishengir/Config/: bishengir-config.h.cmake
bishengir/include/bishengir/Conversion/: Passes.td
bishengir/include/bishengir/Conversion/HFusionToHIVM/: Utils.h
bishengir/include/bishengir/Dialect/: CMakeLists.txt
bishengir/include/bishengir/Dialect/Analysis/: DimensionAnalyzer.h
bishengir/include/bishengir/Dialect/HIVM/: CMakeLists.txt
bishengir/include/bishengir/Dialect/Utils/: Util.h
bishengir/include/bishengir/ExecutionEngine/: Passes.h  Passes.td
bishengir/include/bishengir/Pass/: CPURunnerMetadata.h  PassManager.h
bishengir/include/bishengir/Tools/: CMakeLists.txt
bishengir/include/bishengir/Tools/Utils/: Utils.h
bishengir/include/bishengir/Tools/bishengir-compile/: Config.h  Options.td
bishengir/include/bishengir/Tools/bishengir-hivm-compile/: BiShengIRHIVMCompile.h  CMakeLists.txt  Config.h  Options.td
bishengir/include/bishengir/Transforms/: Passes.h  Passes.td
bishengir/include/bishengir/Version/: Version.h
bishengir/lib/Dialect/: CMakeLists.txt
bishengir/lib/Dialect/Annotation/IR/: AnnotationOps.cpp
bishengir/lib/Dialect/Arith/Transforms/: CMakeLists.txt  MeshShardingInterfaceImpl.cpp
bishengir/lib/Dialect/ExecutionEngine/IR/: CMakeLists.txt  ExecutionEngineDialect.cpp
bishengir/lib/Dialect/ExecutionEngine/Pipelines/: CMakeLists.txt  ExecutionEnginePipelines.cpp
bishengir/lib/Dialect/ExecutionEngine/Transforms/: CMakeLists.txt  ConvertHIVMToUpstream.cpp  CreateHostMain.cpp
bishengir/lib/Dialect/HFusion/: CMakeLists.txt
bishengir/lib/Dialect/HFusion/IR/: CMakeLists.txt  HFusionDialect.cpp  HFusionImpl.cpp  HFusionOps.cpp
bishengir/lib/Dialect/HFusion/Pipelines/: CMakeLists.txt  HFusionPipelines.cpp
bishengir/lib/Dialect/HFusion/Transforms/: AdaptTritonKernel.cpp  CMakeLists.txt  ComposeMultiReduce.cpp  DimensionBasedCSE.cpp  InlineBrc.cpp  LegalizeBool.cpp  MeshShardingInterfaceImpl.cpp  Normalize.cpp  NormalizeSliceOps.cpp  SimplifyOps.cpp
bishengir/lib/Dialect/HFusion/Utils/: Utils.cpp
bishengir/lib/Dialect/HIVM/: CMakeLists.txt
bishengir/lib/Dialect/HIVM/Analysis/: CMakeLists.txt  DimensionAnalyzer.cpp  DimensionMarker.cpp  Initializer.cpp
bishengir/lib/Dialect/HIVM/IR/: CMakeLists.txt  HIVMCanonicalizations.cpp  HIVMDMAOps.cpp  HIVMDialect.cpp  HIVMIRUtils.cpp  HIVMImpl.cpp  HIVMInterfaces.cpp  HIVMMacroOps.cpp  HIVMOps.cpp  HIVMVectorOps.cpp
bishengir/lib/Dialect/HIVM/Pipelines/: CMakeLists.txt  ConvertToHIVMPipeline.cpp  HIVMPipelines.cpp
bishengir/lib/Dialect/HIVM/TransformOps/: CMakeLists.txt  HIVMTransformOps.cpp
bishengir/lib/Dialect/HIVM/Transforms/: AddFFTSToSyncBlockSetOp.cpp  AllocExtraBuffer.cpp  AllocToAlloca.cpp  AllocToPointerCast.cpp  AutoBlockifyParallelLoop.cpp  AutoInferBufferSize.cpp  BindSyncBlockLockArg.cpp  BindWorkSpaceArg.cpp  BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  CVPipelining.cpp  CloneTensorEmpty.cpp  ComposeCollapseExpand.cpp  ConstantizeBufferSize.cpp  ConvertNonContiguousReshapeToCopy.cpp  ConvertToHIVMOp.cpp  (+47 more)
bishengir/lib/Dialect/MemRef/: CMakeLists.txt
bishengir/lib/Dialect/Symbol/: CMakeLists.txt
bishengir/lib/Dialect/Tensor/: CMakeLists.txt
bishengir/lib/Dialect/Utils/: CMakeLists.txt  OpInterfaceUtils.cpp  Util.cpp
bishengir/tools/bishengir-cpu-runner/: CMakeLists.txt  bishengir-cpu-runner.cpp
(+433 files in other folders)
