if(NOT BISHENGIR_BUILD_STANDALONE_IR_ONLY)
    add_subdirectory(Conversion)
endif()
add_subdirectory(Dialect)
if(NOT BISHENGIR_BUILD_STANDALONE_IR_ONLY)
    add_subdirectory(ExecutionEngine)
endif()
add_subdirectory(Interfaces)
if(NOT BISHENGIR_BUILD_STANDALONE_IR_ONLY)
    add_subdirectory(Tools)
    add_subdirectory(Transforms)
endif()