if(NOT BISHENGIR_BUILD_STANDALONE_IR_ONLY)
  add_subdirectory(Analysis)
endif()
add_subdirectory(Annotation)
add_subdirectory(Bufferization)
if(NOT BISHENGIR_BUILD_STANDALONE_IR_ONLY)
  add_subdirectory(HACC)
endif()
add_subdirectory(HFusion)
add_subdirectory(HIVM)
add_subdirectory(Math)
add_subdirectory(MemRef)
add_subdirectory(MemRefExt)
if(NOT BISHENGIR_BUILD_STANDALONE_IR_ONLY)
  add_subdirectory(SCF)
endif()
add_subdirectory(Symbol)
add_subdirectory(Tensor)
add_subdirectory(Utils)
if(BISHENGIR_ENABLE_TORCH_CONVERSIONS)
  add_subdirectory(Torch)
endif()
