add_subdirectory(Annotation)
add_subdirectory(Bufferization)
add_subdirectory(HFusion)
add_subdirectory(HIVM)
add_subdirectory(Math)
add_subdirectory(MemRef)
add_subdirectory(MemRefExt)
add_subdirectory(Symbol)
add_subdirectory(Tensor)
add_subdirectory(Utils)

if(BISHENGIR_BUILD_STANDALONE_IR_ONLY)
  return()
endif()

add_subdirectory(Analysis)
add_subdirectory(HACC)
add_subdirectory(SCF)

if(BISHENGIR_ENABLE_TORCH_CONVERSIONS)
  add_subdirectory(Torch)
endif()
