add_subdirectory(Annotation)
if(NOT BISHENGIR_BUILD_STANDALONE_IR_ONLY)
  add_subdirectory(HACC)
endif()
add_subdirectory(HFusion)
add_subdirectory(HIVM)
add_subdirectory(MathExt)
add_subdirectory(MemRef)
add_subdirectory(MemRefExt)
add_subdirectory(SCF)
add_subdirectory(Symbol)
add_subdirectory(Tensor)
if(BISHENGIR_ENABLE_TORCH_CONVERSIONS)
  add_subdirectory(Torch)
endif()
